--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
           </div>
 
         </div>
-        
         <!-- CTA -->
         <div class="text-md-center text-start" style="margin-bottom: 100px;">
           <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
@@ -413,22 +412,6 @@
 
         <div class="swipe-container row-1">
           <!-- Original Cards -->
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
-                <p>Managing Director</p>
-              </div>
-            </div>
-            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
-              performance based on client feedback.
-            </p>
-          </div>
 
           <div class="feedback-card">
             <div class="user-info">
@@ -444,6 +427,23 @@
             </div>
             <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
               recommended his work .</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
+              performance based on our requirements.
+            </p>
           </div>
 
           <div class="feedback-card">
@@ -467,23 +467,6 @@
             <div class="user-info">
               <div class="user-avatar">
                 <div class="symbol symbol-45x symbol-circle">
-                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
-                </div>
-              </div>
-              <div>
-                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
-                <p>Managing Director</p>
-              </div>
-            </div>
-            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
-              performance based on client feedback.
-            </p>
-          </div>
-
-          <div class="feedback-card">
-            <div class="user-info">
-              <div class="user-avatar">
-                <div class="symbol symbol-45x symbol-circle">
                   <img src="assets/images/feedbacks/ramesh-chathuranga.png" class="symbol-label" alt="">
                 </div>
               </div>
@@ -494,6 +477,22 @@
             </div>
             <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
               recommended his work .</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
+              performance based on our requirements.
           </div>
 
           <div class="feedback-card">
@@ -517,72 +516,112 @@
         <!-- Second Row (Right to Left) -->
         <div class="swipe-container row-2">
           <!-- Original Cards -->
-          <!-- <div class="feedback-card">
+
+          <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/mohamed-basem.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
+                <p>Senior Develoepr & Business Owner</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+            <p class="mb-0">Akash's contributions are nothing short of amazing and impressive; his dedication to
+              excellence elevates every project.
+            </p>
           </div>
 
           <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/sadaqat-ali.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
+                <p>Senior Full Stack Develoepr</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+            <p class="mb-0">Akash consistently delivers innovative and unique UI/UX designs. His front-end development
+              skills are exceptional, making him a top-tier designer. I highly recommend him for any project.
+            </p>
           </div>
 
           <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/future-green-asia.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Future Green Asia</p>
+                <p>Co-Founder</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
-          </div> -->
+            <p class="mb-0">Akash helped me transition my business into the digital world. He designed my logo, website,
+              business cards,
+              invoices, and all other product designs. I appreciate his work.
+            </p>
+          </div>
 
           <!-- Duplicate Cards -->
-          <!-- <div class="feedback-card">
+          <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/mohamed-basem.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
+                <p>Senior Develoepr & Business Owner</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+            <p class="mb-0">Akash's contributions are nothing short of amazing and impressive; his dedication to
+              excellence elevates every project.
+            </p>
           </div>
 
           <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/sadaqat-ali.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Amarican University in the Emirates</p>
+                <p>Senior Full Stack Develoepr</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+            <p class="mb-0">Akash consistently delivers innovative and unique UI/UX designs. His front-end development
+              skills are exceptional, making him a top-tier designer. I highly recommend him for any project.
+            </p>
           </div>
 
           <div class="feedback-card">
             <div class="user-info">
-              <div class="user-avatar">ID</div>
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/future-green-asia.png" class=" symbol-label" alt="">
+                </div>
+              </div>
               <div>
-                <p class="user-handle">@InspiredDesigns</p>
-                <p>Web Designer</p>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Future Green Asia</p>
+                <p>Co-Founder</p>
               </div>
             </div>
-            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
-          </div> -->
+            <p class="mb-0">Akash helped me transition my business into the digital world. He designed my logo, website,
+              business cards,
+              invoices, and all other product designs. I appreciate his work.
+            </p>
+          </div>
+
         </div>
 
       </section>
@@ -646,9 +685,6 @@
 
 
   <script>
-    function openBlogPage() {
-      window.location.href = "./blog.html";
-    }
     const swiper = new Swiper('.mySwiper', {
       loop: true,
       speed: 4000,
