--- a/index.html
+++ b/index.html
@@ -640,13 +640,12 @@
         <div class="footer-bottom">
           <div class="footer-bottom-content">
             <div class="copyright">
-              ©2025 Akash Palandagama
+              ©2025 Developed by Akash Palandagama
             </div>
             <div class="social-links">
-              <a href="#" target="_blank">LinkedIn</a>
-              <a href="#" target="_blank">Dribbble</a>
-              <a href="#" target="_blank">Behance</a>
-              <a href="#" target="_blank">Twitter</a>
+              <a href="https://www.linkedin.com/in/akashpalandagama/" target="_blank">LinkedIn</a>
+              <a href="https://dribbble.com/AkashPalandagama" target="_blank">Dribbble</a>
+              <a href="https://www.behance.net/akashpalanda" target="_blank">Behance</a>
             </div>
 
           </div>
