--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
       </section>
 
       <!-- Footer -->
-      <footer class="scroll-effect section-padding-2" id="contact">
+      <footer class="section-padding-2" id="contact">
         <div class="footer-main ">
           <div class="footer-content ">
             <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
