--- a/all-projects.html
+++ b/all-projects.html
@@ -226,11 +226,37 @@
           </div>
 
           <div class="text-center">
-            <a href="index.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Go to Main Page</a>
+            <a href="index.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Back to Main Page</a>
           </div>
 
         </div>
       </div>
+
+            <!-- Footer -->
+            <footer class="scroll-effect" id="contact">
+              <div class="footer-main ">
+                <div class="footer-content ">
+                  <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
+                  <p>From understanding user needs to designing seamless interfaces, I specialize in creating
+                    exceptional
+                    UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
+                </div>
+              </div>
+      
+              <div class="footer-bottom">
+                <div class="footer-bottom-content">
+                  <div class="copyright">
+                    ©2025 Developed by Akash Palandagama
+                  </div>
+                  <div class="social-links">
+                    <a href="https://www.linkedin.com/in/akashpalandagama/" target="_blank">LinkedIn</a>
+                    <a href="https://dribbble.com/AkashPalandagama" target="_blank">Dribbble</a>
+                    <a href="https://www.behance.net/akashpalanda" target="_blank">Behance</a>
+                  </div>
+      
+                </div>
+              </div>
+            </footer>
     </div>
   </div>
 
