--- a/index.html
+++ b/index.html
@@ -458,8 +458,9 @@
                 <p>Team Lead - Lamp Stack</p>
               </div>
             </div>
-            <p class="mb-0">Good team player with strong UI/UX skills, open to feedback, and collaborates
-              effectively to improve designs and user experience.</p>
+            <p class="mb-0">Akash is an exceptional UI/UX Developer with a strong eye for design and a user-focused
+              approach. Their ability to craft intuitive, visually appealing interfaces makes them a valuable asset to
+              any team.</p>
           </div>
 
           <!-- Duplicate Cards -->
@@ -507,8 +508,9 @@
                 <p>Team Lead - Lamp Stack</p>
               </div>
             </div>
-            <p class="mb-0">Good team player with strong UI/UX skills, open to feedback, and collaborates
-              effectively to improve designs and user experience.</p>
+            <p class="mb-0">Akash is an exceptional UI/UX Developer with a strong eye for design and a user-focused
+              approach. Their ability to craft intuitive, visually appealing interfaces makes them a valuable asset to
+              any team.</p>
           </div>
 
         </div>
