--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 
         </div>
         <!-- CTA -->
-        <div class="text-md-center text-start" style="margin-bottom: 100px;">
+        <div class="text-md-center text-start" style="margin-bottom: 0px;">
           <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
           <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
             Call</a>
         </div>
 
         <!-- Techstack -->
-        <div class="scroll-effect">
+        <!-- <div class="scroll-effect">
           <div class="swiper mySwiper ">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -146,7 +146,7 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
 
