--- a/index.html
+++ b/index.html
@@ -302,14 +302,29 @@
 
             </div>
             <div class="fw-normal text-gray-800 fs-4">
-              AUE is a leading university in Dubai, UAE, maintaining an in-house ERP system to manage all university
-              activities, from student registration to alumni affairs. The system covers exams, CLO & PLO
-              management, VPAA, department chairs, finance, procurement, and all essential business processes
-              required for efficient university operations. It includes key components such as the Admission &
-              Registration Database (ARD), Human Resource Management (HRM), Student and Alumni Portal, Employee
-              Portal, Learning Management System (LMS), Exam Portal, Community Portal, and Workshops with related
-              platform. It is a smart, all-in-one platform designed to streamline administration,
-              enhance student success, and drive institutional growth.
+              Designed and developed user interfaces for a complex SaaS application with a strong focus on performance,
+              accessibility, and multi-user adaptability. Created dynamic screens to handle large datasets efficiently
+              while maintaining a smooth and responsive UI across all devices. <br><br>
+
+              Worked on product modules used by a diverse audience including Directors, Developers, System Architects,
+              HR Managers, Student Affairs Coordinators, Department Heads, and administrative staff. Delivered scalable,
+              user-friendly designs using Figma and translated them into clean, maintainable HTML and CSS code using
+              Visual Studio Code.<br><br>
+
+              Built and maintained design systems, reusable components, and user-centric layouts with a focus on
+              spacing, color theming, visual hierarchy, typography, and solid 3D visuals that align with the brand
+              experience.<br><br>
+
+              Led the end-to-end UI/UX workflow: from analyzing requirements, building flowcharts and wireframes, to
+              designing final UI and implementing it into the system with close collaboration with backend developers.
+              Ensured accessibility by applying WCAG 2.1+ standards.<br><br>
+
+              Conducted UX research and competitive analysis, developed empathy maps and affinity diagrams, and utilized
+              design thinking and A/B testing to continuously refine and improve user experiences. Tailored designs to
+              user age groups and tech proficiency, ensuring inclusivity and simplicity.<br><br>
+
+              This role allowed me to bridge design and development effectively and contribute to the success of a
+              modern SaaS solution through thoughtful and research-driven UI/UX design.
             </div>
           </div>
           <div class="col-12 mb-10 mb-md-15">
@@ -345,7 +360,26 @@
               Archnix is a global tech company specializing in software development, digital marketing, SEO, and
               SMM. Founded in 2020 and registered in the UK, it operates in the UK, Canada, Sri Lanka, India, and
               the UAE. Archnix focuses on innovative digital solutions, automation, and delivering top-tier user
-              experiences worldwide.
+              experiences worldwide. <br><br>
+
+              Working with ISO 9001 Quality Management and ISO 27001 Information Security Management policies. <br><br>
+
+              <div class="fw-bold text-gray-800 fs-4">Responsibilities:</div> <br>
+
+              I specialize in conducting user research through interviews and usability testing to gather meaningful
+              insights that guide design decisions. I craft wireframes and interactive prototypes to visualize
+              intuitive, user-friendly, and visually engaging interfaces.<br><br>
+
+              With a strong focus on optimizing user flows, I collaborate closely with cross-functional teams to align
+              with project goals and user needs. Usability testing remains a core part of my iterative process, ensuring
+              designs are continually refined based on real feedback.<br><br>
+
+              I prioritize responsive and accessible design across all devices, adhering to modern design principles and
+              maintaining consistent design systems. Staying up to date with the latest trends in UI/UX, I document
+              detailed design specifications for developers and manage tasks effectively to meet deadlines without
+              compromising on quality.
+
+
             </div>
           </div>
           <div class="col-12 mb-10 mb-md-15">
