--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <!-- Techstack -->
-        <!-- <div class="scroll-effect">
+        <div class="scroll-effect section-padding-2">
           <div class="swiper mySwiper ">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -146,7 +146,7 @@
 
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
 
 
