--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               student success, and drive institutional growth.</div>
           </div>
 
-          <div class="col-md-6 col-12 mb-10">
+          <!-- <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
               style="background-color: #FFF7F6; border-color: #d7363e !important; overflow: hidden;">
               <img src="./assets/images/projects-banners/soonerspublicschool.png"
@@ -188,9 +188,9 @@
             <div class="fw-normal fs-4">
               School is located in Pakistan, I designed all the systems for students, parents,
               teachers, and the super admin portals.</div>
-          </div>
+          </div> -->
 
-          <div class="col-md-6 col-12 mb-10">
+          <!-- <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
               style="background-color: #F9FFF4; border-color: #88BA5D !important; overflow: hidden;">
               <img src="./assets/images/projects-banners/imaginetechsol.png" class="h-400px mt-20 ms-20 hover-scale"
@@ -202,21 +202,8 @@
             <div class="fw-bold fs-3 mb-1">Imagine Tech Solutions</div>
             <div class="fw-normal fs-4">Specializing in custom software, cloud solutions, and UI/UX design to drive
               business growth and digital transformation.</div>
-          </div>
+          </div> -->
 
-          <div class="col-md-6 col-12 mb-10">
-            <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
-              style="background-color: #ede4d4; border-color: #b78a58 !important; overflow: hidden;">
-              <img src="./assets/images/projects-banners/sig.png" class="h-400px mt-20 ms-20 hover-scale" alt="">
-            </div>
-            <div class="mb-5">
-              <span class="badge-3 badge-3-blue">Website</span>
-            </div>
-            <div class="fw-bold fs-3 mb-1">Specialized Investment Group</div>
-            <div class="fw-normal fs-4">SIG is a diversified company based in Dubai, UAE, specializing in education,
-              heavy bus assembly, transportation, real estate, infrastructure, freight forwarding, and agriculture.
-            </div>
-          </div>
 
           <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
@@ -265,6 +252,20 @@
 
           <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+              style="background-color: #ede4d4; border-color: #b78a58 !important; overflow: hidden;">
+              <img src="./assets/images/projects-banners/sig.png" class="h-400px mt-20 ms-20 hover-scale" alt="">
+            </div>
+            <div class="mb-5">
+              <span class="badge-3 badge-3-blue">Website</span>
+            </div>
+            <div class="fw-bold fs-3 mb-1">Specialized Investment Group</div>
+            <div class="fw-normal fs-4">SIG is a diversified company based in Dubai, UAE, specializing in education,
+              heavy bus assembly, transportation, real estate, infrastructure, freight forwarding, and agriculture.
+            </div>
+          </div>
+
+          <div class="col-md-6 col-12 mb-10">
+            <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
               style="background-color: #e4eed9; border-color: #aac98d !important; overflow: hidden;">
               <img src="./assets/images/projects-banners/futuregreenasia.png" class="h-400px mt-20 ms-20 hover-scale"
                 alt="">
@@ -302,29 +303,21 @@
 
             </div>
             <div class="fw-normal text-gray-800 fs-4">
-              Designed and developed user interfaces for a complex SaaS application with a strong focus on performance,
-              accessibility, and multi-user adaptability. Created dynamic screens to handle large datasets efficiently
-              while maintaining a smooth and responsive UI across all devices. <br><br>
+              Collaborated with cross-functional teams to design and develop high-performance, accessible user
+              interfaces for a complex SaaS application, leveraging MVC architecture for scalable front-end solutions.
+              Engineered responsive web and mobile experiences capable of handling large datasets, ensuring smooth
+              performance across all devices. This resulted in a 20% increase in web engagement, 80% boost in mobile
+              engagement, and 20% reduction in user support tickets. <br><br>
 
-              Worked on product modules used by a diverse audience including Directors, Developers, System Architects,
-              HR Managers, Student Affairs Coordinators, Department Heads, and administrative staff. Delivered scalable,
-              user-friendly designs using Figma and translated them into clean, maintainable HTML and CSS code using
-              Visual Studio Code.<br><br>
+              Led the full UI/UX workflow, from analyzing requirements, building wireframes and flowcharts to designing
+              and implementing the final UI. Ensured accessibility by applying WCAG 2.1+ standards. Conducted UX
+              research, competitive analysis, and used design thinking, A/B testing, empathy maps, and affinity diagrams
+              to continually refine user experiences.<br><br>
 
-              Built and maintained design systems, reusable components, and user-centric layouts with a focus on
-              spacing, color theming, visual hierarchy, typography, and solid 3D visuals that align with the brand
-              experience.<br><br>
-
-              Led the end-to-end UI/UX workflow: from analyzing requirements, building flowcharts and wireframes, to
-              designing final UI and implementing it into the system with close collaboration with backend developers.
-              Ensured accessibility by applying WCAG 2.1+ standards.<br><br>
-
-              Conducted UX research and competitive analysis, developed empathy maps and affinity diagrams, and utilized
-              design thinking and A/B testing to continuously refine and improve user experiences. Tailored designs to
-              user age groups and tech proficiency, ensuring inclusivity and simplicity.<br><br>
-
-              This role allowed me to bridge design and development effectively and contribute to the success of a
-              modern SaaS solution through thoughtful and research-driven UI/UX design.
+              Designed product modules for a diverse user base, including directors, developers, HR managers, students,
+              alumni, communities, and external users (internship providers, etc.). Tailored designs to various age
+              groups and tech proficiency, leading to a 25% increase in user engagement and a 15% improvement in
+              conversion rates, while maintaining inclusivity, accessibility, and simplicity.
             </div>
           </div>
           <div class="col-12 mb-10 mb-md-15">
@@ -662,33 +655,33 @@
 
       </section>
 
-      <!-- Footer -->
-      <footer class="section-padding-2" id="contact">
-        <div class="footer-main ">
-          <div class="footer-content ">
-            <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
-            <p>From understanding user needs to designing seamless interfaces, I specialize in creating
-              exceptional
-              UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <div class="footer-bottom-content">
-            <div class="copyright">
-              ©2025 Developed by Akash Palandagama
-            </div>
-            <div class="social-links">
-              <a href="https://www.linkedin.com/in/akashpalandagama/" target="_blank">LinkedIn</a>
-              <a href="https://dribbble.com/AkashPalandagama" target="_blank">Dribbble</a>
-              <a href="https://www.behance.net/akashpalanda" target="_blank">Behance</a>
-            </div>
-
-          </div>
-        </div>
-      </footer>
-
     </div>
+
+    <!-- Footer -->
+    <footer class="" id="contact">
+      <div class="footer-main">
+        <div class="footer-content">
+          <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
+          <p>From understanding user needs to designing seamless interfaces, I specialize in creating
+            exceptional
+            UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="footer-bottom-content">
+          <div class="copyright">
+            ©2025 Designed & Developed by Akash Palandagama
+          </div>
+          <div class="social-links">
+            <a href="https://www.linkedin.com/in/akashpalandagama/" target="_blank">LinkedIn</a>
+            <a href="https://dribbble.com/AkashPalandagama" target="_blank">Dribbble</a>
+            <a href="https://www.behance.net/akashpalanda" target="_blank">Behance</a>
+          </div>
+
+        </div>
+      </div>
+    </footer>
 
   </div>
 
